<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.dynamo.jpmc.weatherapp.model.WeatherForecast" />

        <variable
            name="location"
            type="com.dynamo.jpmc.weatherapp.model.WsLocation" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.current.WeatherHomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:id="@+id/main_container"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/container_height"
                    android:background="@color/purple_200"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@{location.city}"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        tools:text="Ahmedabad" />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_city"
                        android:layout_marginStart="16dp"
                        android:text="@{item.current.formattedDate}"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="Saturday, March 11" />

                    <TextView
                        android:id="@+id/condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_date"
                        android:layout_alignStart="@id/tv_date"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="8dp"
                        android:text="@{item.current.weather.get(0).description}"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="Light Rain" />

                    <ImageView
                        android:id="@+id/iv_weather"
                        android:layout_width="@dimen/big_icon_size"
                        android:layout_height="@dimen/big_icon_size"
                        android:layout_alignParentEnd="true"
                        android:padding="8dp"
                        app:weatherIconUrl="@{item.current.weather.get(0).icon}" />

                    <TextView
                        android:id="@+id/tv_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:padding="16dp"
                        android:textColor="@color/white"
                        android:textSize="48sp"
                        app:formatTemperature="@{item.current.temp}"
                        tools:text="36C" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/container_background"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/main_container"
                    app:layout_constraintVertical_bias="0.0">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="8dp">

                            <ImageView
                                android:id="@+id/thermometer"
                                android:layout_width="50dp"
                                android:layout_height="70dp"
                                android:layout_marginEnd="8dp"
                                android:src="@drawable/ic_thermometer" />

                            <TextView
                                android:id="@+id/tv_feels_like"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@+id/thermometer"
                                android:text="@string/title_feels_like"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/feel_like"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_feels_like"
                                android:layout_marginTop="4dp"
                                android:layout_toEndOf="@+id/thermometer"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                app:formatTemperature="@{item.current.feels_like}"
                                tools:text="22C" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_feels_like"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="4dp"
                                android:layout_toEndOf="@+id/feel_like"
                                android:text="@string/today"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="8dp">

                            <ImageView
                                android:id="@+id/humidity_img"
                                android:layout_width="50dp"
                                android:layout_height="70dp"
                                android:layout_marginEnd="8dp"
                                android:src="@drawable/ic_humidity" />

                            <TextView
                                android:id="@+id/tv_humidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@+id/humidity_img"
                                android:text="@string/title_humidity"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/humidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_humidity"
                                android:layout_marginTop="4dp"
                                android:layout_toEndOf="@+id/humidity_img"
                                android:text="@{String.valueOf(item.current.humidity)+'%'}"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                tools:text="22C" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="8dp">

                            <ImageView
                                android:id="@+id/wind_img"
                                android:layout_width="50dp"
                                android:layout_height="70dp"
                                android:layout_marginEnd="8dp"
                                android:src="@drawable/ic_wind" />

                            <TextView
                                android:id="@+id/tv_wind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@+id/wind_img"
                                android:text="@string/title_wind"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/wind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_wind"
                                android:layout_marginTop="4dp"
                                android:layout_toEndOf="@+id/wind_img"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                app:formatWind="@{item.current.wind_speed}"
                                tools:text="22C" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="8dp">

                            <ImageView
                                android:id="@+id/sun"
                                android:layout_width="50dp"
                                android:layout_height="70dp"
                                android:layout_marginEnd="8dp"
                                android:src="@drawable/ic_sun" />

                            <TextView
                                android:id="@+id/tv_uv_index"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@+id/sun"
                                android:text="@string/title_uv_index"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/uv_index"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_uv_index"
                                android:layout_marginTop="4dp"
                                android:layout_toEndOf="@+id/sun"
                                android:text="@{String.valueOf(item.current.uvi)}"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                tools:text="22C" />

                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hourlyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:scrollbars="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/container" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/container_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hourlyRecyclerView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/weeklyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>